# pypermm

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
pypermm/: __init__.py  asa.py  atoms.py  constants.py  dipole_lib.json  dipoles.py  math_utils.py  membrane.py  orientation.py  permeability.py  pypermm.py
tests/: __init__.py  test_caffeine.py  test_stub.py
