[project]
name = "pypermm"
description = "pypermm"
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Corin Wagen"}]
requires-python = ">=3.13"
dependencies = [
    "numpy==2.*",
]
license = "MIT"

[dependency-groups]
dev = [
    "pre-commit>=4.3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "ty>=0.0.8",
]

[tool.setuptools.package-data]
pypermm = ["*.json"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]

ignore = [
    "D103", # Docstrings required
    "N803", # Non-lowercase function argument
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004",  # Magic value in comparison
    "RUF022", # __all__ sorting
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
not-subscriptable = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests", "pypermm"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
